--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,13 @@
 	font-family: "Ionicons";
 	text-align: center;
 	font-size: 16px;
+	width: 20px;
+}
+
+#open-files-container .file-icon {
+	display: inline-block;
+	width: 20px;
+	padding-top: 2px;
 }
 
 #project-files-container ins {
