--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,10 @@
 	font-size: 16px;
 	width: 20px;
 }
+.jstree ins.file-tree-view-icon {
+	margin-left: -20px;
+	background-image: none;
+}
 
 #open-files-container .file-icon, .open-files-container .file-icon {
 	display: inline-block;
