--- a/styles/style.css
+++ b/styles/style.css
@@ -8,21 +8,14 @@
 	text-align: center;
 	font-size: 16px;
 	width: 20px;
+	text-decoration: none;
+	display: inline-block;
 }
 .jstree ins.file-tree-view-icon {
 	margin-left: -20px;
 	background-image: none;
 }
 
-#open-files-container .file-icon, .open-files-container .file-icon {
-	display: inline-block;
-	width: 20px;
-	padding-top: 2px;
-}
-
-#project-files-container ins {
-
-}
 #project-files-container a {
 	padding-left: 10009px;
 }
