Added c, clj, cpp, cs, groovy, hx, pl, scala, vb(s), properties, fix #42
Added:
- C
- Clojure
- C++
- C#
- Groovy
- Haxe
- Perl
- Scala
- VB
- VBScript
- .properties

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,11 @@
     padding-left: 10009px;
 }
 
-.icon-js:before {
+.icon-c:before {
 	content: '{ }';
+}
+
+.icon-rotated {
+	transform: rotate(-10deg);
+	-webkit-transform: rotate(-10deg);
 }
