--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
-.file-icon-box {
-	width: 25px;
+ins.file-icon-box {
+	width: 20px;
 	display: inline-block;
 	text-decoration: none;
 }
@@ -11,12 +11,12 @@
 	display: block;
 }
 .file-icon-secondary {
-	margin-left: 13px;
+	margin-left: 10px;
 	margin-top: -10px;
 	width: 10px;
 }
-.jstree ins.file-tree-view-icon {
-	margin-left: -20px;
+.jstree ins.file-icon-box {
+	margin-left: -22px;
 	background-image: none;
 }
 
