--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ ins.file-icon-box {
 	margin-left: 10px;
 	margin-top: -10px;
 	width: 10px;
+	opacity: 0.8;
 }
 .jstree ins.file-icon-box {
 	margin-left: -22px;
