--- a/styles/style.css
+++ b/styles/style.css
@@ -40,3 +40,8 @@ ins.file-icon-box {
 	transform: rotate(-10deg);
 	-webkit-transform: rotate(-10deg);
 }
+.file-icon-rotate-90 {
+	-ms-transform: rotate(90deg);
+	transform: rotate(90deg);
+	-webkit-transform: rotate(90deg);
+}
