--- a/styles/style.css
+++ b/styles/style.css
@@ -45,3 +45,8 @@ ins.file-icon-box {
 	transform: rotate(90deg);
 	-webkit-transform: rotate(90deg);
 }
+
+.jstree-open>a,
+.jstree-closed>a {
+    margin-left: 13px;
+}
